Pagination added for current prices and claude.md added